--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,179 @@
-* {
-/*// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 400 to 900
+.profile {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+    padding: 10px, 20px;
+    
+}
+.profile h1 {
+    text-align: center;
+    color: #eee;
+    margin-left: 15px;
+}
 
-.playfair-display-<uniquifier> {
-  font-family: "Playfair Display", serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}*/
+.profile img {
+    width: 80px;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+
+.flexbox-container {
+    display: flex;
+    flex-flow: row wrap;
+    text-align: center;
+}
+
+.flexbox-container > * {
+    padding-bottom: 10px;
+    margin: 10px;
+    flex: 1 100%;
+    border-radius: 10px;
+}
+
+.flexbox-item {
+    width: 200px;
+    margin: 10px;
+    border: 3px solid #333;
+    background-color: #eee;
+}
+
+.flexbox-item h1 {
+    background-color: rgb(86, 19, 148);
+    color: #eee;
+    font-weight: 300;
+}
+
+.flexbox-container ul {
+    text-align: left;
+    margin: 10px;
+    padding: 20px;
+}
+
+.figure {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+
+.figure img {
+    max-width: 100%;
+    margin-bottom: 8px;
+}
+
+.flexbox-item-1 {
+    min-height: 100px;
+}
+
+.flexbox-item-2 {
+    min-height: 100px;
+}
+
+.flexbox-item-3 {
+    min-height: 100px;
+}
+
+.flexbox2 {
+    margin: 10px;
+    border: 3px solid #333;
+    border-radius: 10px;
+}
+
+.flexbox2 h2 {
+    background-color: rgb(86, 19, 148);
+    text-align: center;
+    color: #eee;
+}
+.flexbox-container2 {
+    display: flex;
+    justify-content: center;
+}
+
+
+
+.flexbox-item2 {
+    width: 200px;
+    margin: 10px;
+    border: 3px solid #333;
+    background-color: #000;
+}
+
+.flexbox-item-01 {
+    min-height: 40px;
+    border-radius: 10px;
+}
+
+.flexbox-item-02 {
+    min-height: 40px;
+    border-radius: 10px;
+}
+
+.flexbox-item-03 {
+    min-height: 40px;
+    border-radius: 10px;
+}
+
+.flexbox-item2 P {
+    margin-top: 8px;
+    text-align: center;
+    color: #eee;
+}
+
+.flexbox-container3 {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.main {
+    margin-bottom: 100px;
+}
+
+.flexbox-item3 {
+    width: 200px;
+    margin-bottom: 10px;
+    border: 2px;
+    background-color: #611010;
+}
+
+.flexbox-item3 P {
+    margin-top: 8px;
+    text-align: center;
+    color: #eee;
+}
+
+.flexbox-item-004 p {
+    margin-top: 8px;
+    text-align: center;
+    color: #000;
+}
+
+.flexbox-item-006 p {
+    margin-top: 8px;
+    text-align: center;
+    color: #000;
+}
+
+footer {
+    background-color: #1b1ead;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+
+  footer img {
+    width: 30px;
+  }
+
+  #lastModified {
+    color: yellowgreen;
+  }
+  
 
 /*Mobile Css*/
 * {
@@ -16,33 +182,220 @@
     box-sizing: border-box;
 }
 
+#menu {
+    display: block;
+    font-size: 2rem;
+    font-weight: 700;
+    text-decoration: none;
+    padding: .5rem .75rem;
+    margin-bottom: 60px;
+    color: #eee;
+    margin-left: 15px;
+}
+
+#menu::before {
+    content: "☰";
+}
+
 nav {
+    background-color: black;
+    width: 100%;
+}
+
+.navigation {
+    list-style: none;
+    margin: 0 auto;
+    max-width: 760px;
+    width: 100%;
+}
+
+.navigation li {
+    display: none;
+}
+
+.navigation a {
+    display: block;
+    padding: 0.75rem;
+    text-align: left;
+    text-decoration: none;
+    color: #eee;
+    font-weight: 200;
+    transition: 0.5s;
+    font-size: clamp(1rem, 2vmin, 1.5rem);
+}
+
+.navigation a:hover, navigation a:active {
+    color: white;
+    background-color: black;
+}
+
+.show li {
     display: block;
 }
+
+#menu.show::before {
+    content: "x";
+}
+
 
 header {
     background-color: rgb(86, 19, 148);
     color: #333;
-    padding: 10px 20px;
-	display: flex;
+    padding: 10px 0px;
+	display: block;
     justify-content: space-between;
     align-items: center;
 }
 
-
+.flexbox-item-001 {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
 }
+
+.flexbox-item-002 {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
+}
+
+.flexbox-item-003 {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
+}
+
+.flexbox-item-004 {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
+    background-color: #eee;
+    border: 2px solid #c5c3c3;
+}
+
+.flexbox-item-005 {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
+}
+
+.flexbox-item-006 {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
+    background-color: #eee;
+    border: 2px solid #c5c3c3;
+}
+
 /*Larger View Css*/
 @media (min-width: 900px) {
+    .navigation {
+        display: flex;
+    }
+
+    .navigation li {
+        display: block;
+        flex: 1 1 100%;
+    }
+
+    .navigation a {
+        text-align: center;
+    }
     #menu {
 		display: none; /* hide hamburger button */
 	}
 
-	.navigation {
+    nav {
+        background-color: rgb(0, 0, 0);
+    }
+
+    .flexbox-item {
+        flex: 2;
+    }
+
+    .flexbox-item-1{
+        order: 1;
+        flex-grow: 4;
+    }
+
+    .flexbox-item-2{
+        order: 2;
+    }
+
+    .figure img {
+        max-width: 100%;
+        margin-bottom: 8px;
+    }
+
+    .flexbox-item3 {
+        width: 200px;
+        margin: 10px;
+        margin-bottom: 10px;
+        border: 2px;
+        background-color: #611010;
+    }
+
+    .flexbox-item-001 {
+        min-height: 40px;
+        min-width: 400px;
+        border-radius: 5px;
+        flex-grow: 1;
+    }
+    
+    .flexbox-item-002 {
+        min-height: 40px;
+        min-width: 400px;
+        border-radius: 5px;
+        flex-grow: 1;
+    }
+    
+    .flexbox-item-003 {
+        min-height: 40px;
+        min-width: 400px;
+        border-radius: 5px;
+        flex-grow: 1;
+    }
+    
+    .flexbox-item-004 {
+        min-height: 40px;
+        min-width: 400px;
+        border-radius: 5px;
+        flex-grow: 1;
+        background-color: #eee;
+        border: 2px solid #c5c3c3;
+    }
+    
+    .flexbox-item-005 {
+        min-height: 40px;
+        min-width: 400px;
+        border-radius: 5px;
+        flex-grow: 1;
+    }
+    
+    .flexbox-item-006 {
+        min-height: 40px;
+        min-width: 400px;
+        border-radius: 5px;
+        flex-grow: 1;
+        background-color: #eee;
+        border: 2px solid #c5c3c3;
+    }
+
+    /* .flexbox-item-3 {
+        flex: 3;
+    } */
+	/*.navigation {
 		flex-direction: row;
 	}
     .navigation a {
 		display: block;
-	}
+	}*/ 
 
 
 }
