--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,6 +64,10 @@
     margin-bottom: 8px;
 }
 
+figcaption {
+    color: #155724;
+}
+
 .flexbox-item-1 {
     min-height: 100px;
 }
@@ -76,6 +80,47 @@
     min-height: 100px;
 }
 
+#certificate{
+    border: 3px solid #eee;
+    border-radius: 10px;
+    margin: 10px;
+}
+
+#certificate h2 {
+    background-color: rgb(86, 19, 148);
+    text-align: center;
+    color: #eee;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+#certificate .total {
+    text-align: center;
+    color: #155724;
+    font-weight: 1000;
+}
+
+.courses {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+button {
+    border: 3px solid #333;
+    background-color: #000;
+    padding: 10px;
+    margin: 10px;
+    min-height: 40px;
+    border-radius: 10px;
+    width: 150px;
+}
+
+button p {
+    color: #eee;
+}
+
+/* 
 .flexbox2 {
     margin: 10px;
     border: 3px solid #333;
@@ -91,8 +136,6 @@
     display: flex;
     justify-content: center;
 }
-
-
 
 .flexbox-item2 {
     width: 200px;
@@ -120,18 +163,19 @@
     margin-top: 8px;
     text-align: center;
     color: #eee;
-}
+} */
 
-.flexbox-container3 {
+/* .flexbox-container3 {
     display: flex;
     flex-wrap: wrap;
-}
+} */
 
 .main {
     margin-bottom: 100px;
+    width: 100%;
 }
 
-.flexbox-item3 {
+/* .flexbox-item3 {
     width: 200px;
     margin-bottom: 10px;
     border: 2px;
@@ -154,7 +198,7 @@
     margin-top: 8px;
     text-align: center;
     color: #000;
-}
+} */
 
 footer {
     background-color: #1b1ead;
@@ -174,6 +218,33 @@ footer {
     color: yellowgreen;
   }
   
+  #course-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 1rem;
+    width: 100%;
+    margin-bottom: 10px;
+    border: 2px;
+}
+
+.completed {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
+    background-color: #eee;
+    border: 2px solid #c5c3c3;
+    color: #155724;
+}
+
+.incomplete {
+    min-height: 40px;
+    min-width: 100%;
+    border-radius: 5px;
+    flex-grow: 1;
+    background-color: #611010;
+    color: #eee;
+}
 
 /*Mobile Css*/
 * {
@@ -200,6 +271,12 @@ footer {
 nav {
     background-color: black;
     width: 100%;
+}
+
+.nav-links a.active {
+    color: yellow;
+    font-weight: bold;
+    border-bottom: 2px solid yellow;
 }
 
 .navigation {
@@ -247,7 +324,7 @@ header {
     align-items: center;
 }
 
-.flexbox-item-001 {
+/* .flexbox-item-001 {
     min-height: 40px;
     min-width: 100%;
     border-radius: 5px;
@@ -291,7 +368,7 @@ header {
     flex-grow: 1;
     background-color: #eee;
     border: 2px solid #c5c3c3;
-}
+} */
 
 /*Larger View Css*/
 @media (min-width: 900px) {
@@ -333,58 +410,13 @@ header {
         margin-bottom: 8px;
     }
 
-    .flexbox-item3 {
-        width: 200px;
-        margin: 10px;
+    #course-list {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+        gap: 1rem;
+        width: 100%;
         margin-bottom: 10px;
         border: 2px;
-        background-color: #611010;
-    }
-
-    .flexbox-item-001 {
-        min-height: 40px;
-        min-width: 400px;
-        border-radius: 5px;
-        flex-grow: 1;
-    }
-    
-    .flexbox-item-002 {
-        min-height: 40px;
-        min-width: 400px;
-        border-radius: 5px;
-        flex-grow: 1;
-    }
-    
-    .flexbox-item-003 {
-        min-height: 40px;
-        min-width: 400px;
-        border-radius: 5px;
-        flex-grow: 1;
-    }
-    
-    .flexbox-item-004 {
-        min-height: 40px;
-        min-width: 400px;
-        border-radius: 5px;
-        flex-grow: 1;
-        background-color: #eee;
-        border: 2px solid #c5c3c3;
-    }
-    
-    .flexbox-item-005 {
-        min-height: 40px;
-        min-width: 400px;
-        border-radius: 5px;
-        flex-grow: 1;
-    }
-    
-    .flexbox-item-006 {
-        min-height: 40px;
-        min-width: 400px;
-        border-radius: 5px;
-        flex-grow: 1;
-        background-color: #eee;
-        border: 2px solid #c5c3c3;
     }
 
     /* .flexbox-item-3 {
