--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -250,6 +250,14 @@ footer {
     font-size: 18px;
 }
 
+.nav-links a.active {
+    clear: both;
+    color: yellow;
+    font-weight: bold;
+    border-bottom: 2px solid yellow;
+    transition: max-height .2s ease-out;
+}
+
 /*Mobile Css*/
 * {
     margin: 0;
@@ -285,11 +293,11 @@ nav {
     width: 100%;
 }
 
-.nav-links a.active {
+/* .nav-links a.active {
     color: yellow;
     font-weight: bold;
     border-bottom: 2px solid yellow;
-}
+} */
 
 .navigation {
     list-style: none;
@@ -328,50 +336,56 @@ nav {
 
 
 /*Larger View Css*/
-@media (min-width: 900px) {
+@media (min-width: 768px) {
 
     /* Header */
-header {
-    background-color: #004d66;
-    color: #fff;
-    padding: 10px 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-header .logo {
-    display: flex;
-    align-items: center;
-}
-header .logo img {
-    height: 50px;
-    margin-right: 10px;
-}
-header nav ul {
-    list-style-type: none;
-    display: flex;
-    gap: 15px;
-    justify-content: right;
-}
-header nav ul li a {
-    color: #fff;
-    text-decoration: none;
-}
+    header {
+        background-color: #004d66;
+        color: #fff;
+        padding: 10px 20px;
+        display: block;
+        justify-content: space-between;
+        align-items: center;
+    }
+    header .logo {
+        display: block;
+        float: left;
+        align-items: center;
+    }
+
+    header .logo h1 {
+        float: right;
+    }
+    header .logo img {
+        height: 50px;
+        margin-right: 10px;
+    }
+    header nav ul {
+        list-style-type: none;
+        gap: 15px;
+        justify-content: right;
+    }
+    header nav ul li a {
+        color: #fff;
+        text-decoration: none;
+    }
     .navigation {
         display: flex;
     }
 
     .navigation li {
-        display: block;
+        display: flex;
         justify-content: right;
         align-items: right;
+        float: right;
     }
 
     .navigation a {
         text-align: right;
     }
+
     #menu {
-		display: none; /* hide hamburger button */
+		display: none; 
 	}
 
     nav {
