--- a/Sapphy/styles/sapphy.css
+++ b/Sapphy/styles/sapphy.css
@@ -218,7 +218,6 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 15px 20px;
-    background: #444;
 }
 
 .nav-links {
@@ -229,7 +228,7 @@ body {
 
 .nav-links a {
     text-decoration: none;
-    color: #fff;
+    color: #222;
     font-weight: bold;
 }
 
